@@ -19,7 +19,8 @@
 #define USE_TDBC_STUBS 1
 #include "tdbc.h"
 
-const TdbcStubs* tdbcStubsPtr;
+extern const TdbcStubs *tdbcStubsPtr;
+const TdbcStubs *tdbcStubsPtr = NULL;
 
 /*
  *-----------------------------------------------------------------------------
@@ -57,7 +58,7 @@ TdbcInitializeStubs(
     ClientData clientData = NULL;
 				/* Client data for the package */
     const char* actualVersion;  /* Actual version of the package */
-    TdbcStubs* stubsPtr;	/* Stubs table for the public API */
+    const TdbcStubs* stubsPtr;	/* Stubs table for the public API */
 
     /* Load the package */
 
@@ -77,7 +78,7 @@ TdbcInitializeStubs(
     if (actualVersion == NULL) {
 	return NULL;
     } else {
-	stubsPtr = (TdbcStubs*) clientData;
+	stubsPtr = (const TdbcStubs*) clientData;
 	if (stubsPtr->epoch != epoch) {
 	    errorMsg = "mismatched epoch number";
 	} else if (stubsPtr->revision < revision) {
